--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social-network-links:
 #  twitter: daattali
 #  rss: true
 #  reddit: yourname
-  linkedin: https://www.linkedin.com/in/lena-hinzer-856637192
+  linkedin: /lena-hinzer-856637192
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
